# franka-proxy

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
assets/: endeffector-config-default-gripper.json  endeffector-config-ee-is-fts.json  endeffector-config-with-fts.json  endeffector-config.json  fts-config-for-old-testing.json  fts-config.json  fts-config_ple.json
cmake/: franka-proxyConfig.cmake  franka-proxyConfig.cmake.in
overlay-ports/franka/: 0001-fix_cmake.patch  0001-windows_includes.patch  0002-create_project_file.patch  0003-missing_includes.patch  0004-fix_cmake_lists.patch  common_1.patch  libfranka_1.patch  portfile.cmake  vcpkg.json
overlay-ports/franka-proxy/: portfile.cmake  sth.patch  vcpkg.json
python/: CMakeLists.txt  Skill.py.bak  controller_test.py  franka_control_python_bindings.cpp  python_bindings.cpp  test.cpp
python/bindings/: py_franka_control.cpp
python/tests/: controller_test.py
source/franka_control/: exception.hpp  forward.hpp  franka_control_test.cpp  franka_controller.cpp  franka_controller.hpp  franka_controller_emulated.cpp  franka_controller_emulated.hpp  franka_controller_remote.cpp  franka_controller_remote.hpp  franka_util.cpp  franka_util.hpp  ikfast.cpp  ikfast.h  payload_estimation.cpp  payload_estimation.hpp
source/franka_control_test/: franka_control_test.cpp  main.cpp
source/franka_proxy/: csv_data_struct.hpp  csv_parser.cpp  csv_parser.hpp  franka_controller.cpp  franka_controller.hpp  franka_hardware_controller.cpp  franka_hardware_controller.hpp  franka_motion_generator.cpp  franka_motion_generator.hpp  franka_motion_recorder.cpp  franka_motion_recorder.hpp  franka_mover.cpp  franka_mover.hpp  franka_network_control_server.cpp  franka_network_control_server.hpp  franka_network_server.cpp  franka_network_server.hpp  franka_network_state_server.cpp  franka_network_state_server.hpp  franka_proxy.cpp  franka_proxy.hpp  franka_proxy_protocol.hpp  impedance_pose_generator.cpp  impedance_pose_generator.hpp  impedance_position_generator.cpp  impedance_position_generator.hpp  motion_generator_admittance.cpp  motion_generator_admittance.hpp  motion_generator_cartesian_impedance.cpp  motion_generator_cartesian_impedance.hpp  motion_generator_force.cpp  motion_generator_force.hpp  motion_generator_impedance.cpp  motion_generator_impedance.hpp  motion_generator_impedance_hold_position.cpp  motion_generator_impedance_hold_position.hpp  motion_generator_joint_imp_ple.cpp  motion_generator_joint_imp_ple.hpp  motion_generator_joint_impedance.cpp  motion_generator_joint_impedance.hpp  (+14 more)
source/franka_proxy_client/: exception.hpp  forward.hpp  franka_network_client.cpp  franka_network_client.hpp  franka_network_client2.cpp  franka_network_client2.hpp  franka_remote_controller.cpp  franka_remote_controller.hpp  franka_remote_interface.cpp  franka_remote_interface.hpp
source/franka_proxy_client_test/: main.cpp
source/franka_proxy_share/: asio_forward.hpp  franka_proxy_commands.cpp  franka_proxy_commands.hpp  franka_proxy_logger.cpp  franka_proxy_logger.hpp  franka_proxy_messages.cpp  franka_proxy_messages.hpp
source/franka_util/: exception.hpp  franka_util.cpp  franka_util.hpp
source/ft_sensor/: ft_sensor.hpp  schunk_ft.cpp  schunk_ft.hpp
source/jr3_ft_sensor/: force_torque_sensor.cpp
source/jr3_fts/: force_torque_sensor.cpp  force_torque_sensor.hpp
source/logging/: logger.cpp  logger.hpp  motion_logger.cpp  motion_logger.hpp
source/sensor_calibration/: schunk_ft_to_franka_calibration.cpp  schunk_ft_to_franka_calibration.hpp
source/unsupported/jr3_ft_sensor/: force_torque_sensor.cpp  force_torque_sensor_JR3PCIIoctls.h
source/unsupported/sa_hecken/: csv_data_struct.hpp  csv_parser.cpp  simulated_annealing.cpp
tools/: CMakePresets.json
tools/copy_scripts/: copy_all_data.bat  franka_proxy_copy_assets.bat  util_copy_file.bat  util_copy_libfranka_dlls.bat
tools/resharper/: team-shared-settings.DotSettings
tools/vcpkg-overlay-ports/franka/: 0001-fix-cmake.patch  0001-fix-common-cmake.patch  portfile.cmake  vcpkg.json
tools/vcpkg-overlay-ports/franka-proxy/: portfile.cmake  vcpkg.json
tools/visual_studio_2017/: franka_proxy.sln  franka_proxy.sln.DotSettings
tools/visual_studio_2017/projects/: franka_control.vcxproj  franka_proxy.vcxproj  franka_proxy.vcxproj.filters  franka_proxy_client.vcxproj  franka_proxy_client.vcxproj.filters  franka_proxy_client_test.vcxproj  franka_proxy_client_test.vcxproj.filters  lowpass.csv  motion_log.csv  record.csv  record_save.csv  record_save2.csv  record_save3.csv  record_save_xz.csv  roll_mean.csv  test123.R  test123.csv
tools/visual_studio_2017/props/: build_common.props  build_mode_debug.props  build_mode_release.props  build_type_app.props  build_type_library.props  build_type_standalone.props  build_use_eigen.props  build_use_libfranka_debug.props  build_use_libfranka_release.props  use_viral_core.props
tools/visual_studio_2019/: franka_proxy.sln
tools/visual_studio_2019/enc_temp_folder/512c43b5b7a0b826e56e54b4de69a311/: franka_proxy.cpp
tools/visual_studio_2019/enc_temp_folder/6ea18621a4568dcd544c4936864afd/: franka_proxy.cpp
tools/visual_studio_2019/enc_temp_folder/bb3a59f45a7aba4d7b1f659299b9c6e/: franka_proxy.cpp
tools/visual_studio_2019/projects/: franka_control.vcxproj  franka_control.vcxproj.filters  franka_proxy.vcxproj  franka_proxy.vcxproj.filters  franka_proxy_client.vcxproj  franka_proxy_client.vcxproj.filters  franka_proxy_client_test.vcxproj  franka_proxy_client_test.vcxproj.filters  franka_share.vcxproj  franka_share.vcxproj.filters  franka_util.vcxproj
tools/visual_studio_2019/props/: build_common.props  build_copy_assets.props  build_mode_debug.props  build_mode_release.props  build_type_app.props  build_type_library.props  build_type_standalone.props  build_use_eigen.props  build_use_libfranka.props  build_use_libfranka_debug.props  build_use_libfranka_release.props  use_vcpkg.props  use_viral_core.props
(+2 files in other folders)
